--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,172 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<%= render 'layouts/drawer' do %>
+  <div class="text-[#212121] h-full">
+    <div class="px-12">
+
+      <div>
+        <div class="drawer drawer-end">
+          <input id="review-drawer" type="checkbox" class="drawer-toggle">
+          <div class="drawer-content">
+            <%= render "navbar" %>
+
+            <div class="space-y-4">
+              <h1 class="text-3xl font-bold">Books</h1>
+              <div class="filter">
+                <input class="btn bg-[#F9F9F9] text-[#BDBDBD] shadow-none border-none filter-reset" type="radio" name="metaframeworks" aria-label="All"/>
+                <input class="btn bg-[#F9F9F9] text-[#BDBDBD] shadow-none border-none" type="radio" name="metaframeworks" aria-label="Education"/>
+                <input class="btn bg-[#F9F9F9] text-[#BDBDBD] shadow-none border-none" type="radio" name="metaframeworks" aria-label="Business"/>
+                <input class="btn bg-[#F9F9F9] text-[#BDBDBD] shadow-none border-none" type="radio" name="metaframeworks" aria-label="Sci-fi"/>
+              </div>
+            </div>
+
+            <div class="divider"></div>
+
+
+            <h2 class="text-xl mb-6 font-semibold">Recently added</h2>
+            
+            <div class="card w-[30rem] shadow-xl">
+              <div class="card-body">
+                <div class="flex space-x-5">
+                  <div class="w-1/3">
+                    <img src="https://m.media-amazon.com/images/I/71JUJ6pGoIL.jpg" alt="Animal Farm book cover" class="rounded-xl">
+                  </div>
+                  <div class="w-2/3">
+                    <div class="h-2/4">
+                      <div class="flex">
+                        <h3 class="font-semibold text-xl w-7/8">Animal Farm</h3>
+
+                        <div class="w-1/8">
+                          <label class="cursor-pointer">
+                            <input type="checkbox" class="hidden peer">
+                            <div class="btn p-2 shadow-xl fill-[#BDBDBD] bg-white color-[#BDBDBD] peer-checked:fill-white peer-checked:bg-[#FC674E] peer-checked:border-none rounded-lg">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="" class="bi bi-bookmark-plus-fill peer-checked:fill-white" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M2 15.5V2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.74.439L8 13.069l-5.26 2.87A.5.5 0 0 1 2 15.5m6.5-11a.5.5 0 0 0-1 0V6H6a.5.5 0 0 0 0 1h1.5v1.5a.5.5 0 0 0 1 0V7H10a.5.5 0 0 0 0-1H8.5z"/>
+                              </svg>
+                            </div>
+                          </label>
+
+                        </div>
+
+                      </div>
+                      <div class="w-7/8 flex justify-center items-center space-x-2">
+                        <div>
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-upload" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383"/>
+                            <path fill-rule="evenodd" d="M7.646 4.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V14.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708z"/>
+                          </svg>
+                        </div>
+                        <p>
+                          Added by 
+                          <span class="font-semibold">Fogad</span>
+                        </p>
+                      </div>
+                      <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, harum.</p>
+                    </div>
+                    <div class="h-1/4 space-x-2 flex items-center">
+                      <span class="text-xl font-semibold">4.0</span>
+                      <div class="rating rating-sm">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" aria-label="1 star">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" aria-label="2 star" checked>
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" aria-label="3 star">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" aria-label="4 star">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" aria-label="5 star">
+                      </div>  
+                      <span>(7 Reviews)</span>
+                    </div>
+                    <div class="space-x-4 h-1/4 flex items-end">
+                      <label for="review-drawer" class="btn py-6 rounded-xl btn-outline text-[#111F4D] border-[#E5E5E7] cursor-pointer">
+                        Review
+                      </label>
+                      <button class="btn py-6 rounded-xl bg-[#111F4D] text-white">Read</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="drawer-side">
+            <label for="review-drawer" class="drawer-overlay"></label>
+            <div class="w-96 p-5 h-full overflow-y-scroll shadow-lg bg-[#F2F2F7] space-y-6">
+
+              <div class="grid justify-center items-center space-y-4">
+                <div class="m-auto mb-1">
+                  <img src="https://m.media-amazon.com/images/I/71JUJ6pGoIL.jpg" alt="Animal Farm book cover" class="rounded-xl w-40">
+                </div>
+
+                <div class="text-center">
+                  <h3 class="font-extrabold text-xl">Animal farm</h3>
+                  
+                  <div class="flex text-sm justify-center items-center space-x-2">
+                    <p>
+                      Added by 
+                      <span class="font-semibold">Fogad</span>
+                    </p>
+                  </div>
+
+                </div>
+
+                <div class="m-auto">
+                  <div class="flex justify-center items-center space-x-3">
+                    <div class="rating rating-xs">
+                      <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" aria-label="1 star" />
+                      <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" aria-label="2 star" checked="checked" />
+                      <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" aria-label="3 star" />
+                      <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" aria-label="4 star" />
+                      <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" aria-label="5 star" />
+                    </div>
+                    <span>2.0</span>
+
+                  </div>
+                  <div class="stats stats-horizontal">
+                    <div class="stat">
+                      <div class="stat-value text-sm">347</div>
+                      <div class="stat-desc">pages</div>
+                    </div>
+
+                    <div class="stat">
+                      <div class="stat-value text-sm">14</div>
+                      <div class="stat-desc">ratings</div>
+                    </div>
+
+                    <div class="stat">
+                      <div class="stat-value text-sm">7</div>
+                      <div class="stat-desc">reviews</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div>
+                <h3 class="text-xl font-bold mb-2">Short description</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A reiciendis eius adipisci quo fugiat mollitia fugit vero doloremque totam labore sed, molestias eaque voluptate officia error quam nemo delectus omnis eligendi dolorem animi sequi consectetur repellendus? Quas amet libero explicabo!</p>
+              </div>
+
+              <div class="space-y-3">
+                <h3 class="text-xl font-bold">Review</h3>
+                <div>
+                  <p>Rating</p>
+                  <div class="rating rating-sm">
+                    <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" aria-label="1 star" />
+                    <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" aria-label="2 star" checked="checked" />
+                    <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" aria-label="3 star" />
+                    <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" aria-label="4 star" />
+                    <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" aria-label="5 star" />
+                  </div>
+
+                </div>
+
+                <div>
+                  <p>About</p>
+                  <textarea class="textarea textarea-bordered w-full mt-3" placeholder="Write your review..."></textarea>
+                  <button class="btn bg-[#111F4D] text-white mt-4 rounded-xl ml-auto">Add review</button>
+
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
