--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,65 +23,58 @@
 
             <h2 class="text-xl mb-6 font-semibold">Recently added</h2>
             
-            <div class="card w-[30rem] shadow-xl">
-              <div class="card-body">
-                <div class="flex space-x-5">
-                  <div class="w-1/3">
-                    <img src="https://m.media-amazon.com/images/I/71JUJ6pGoIL.jpg" alt="Animal Farm book cover" class="rounded-xl">
-                  </div>
-                  <div class="w-2/3">
-                    <div class="h-2/4">
-                      <div class="flex">
-                        <h3 class="font-semibold text-xl w-7/8">Animal Farm</h3>
-
-                        <div class="w-1/8">
-                          <label class="cursor-pointer">
-                            <input type="checkbox" class="hidden peer">
-                            <div class="btn p-2 shadow-xl fill-[#BDBDBD] bg-white color-[#BDBDBD] peer-checked:fill-white peer-checked:bg-[#FC674E] peer-checked:border-none rounded-lg">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="" class="bi bi-bookmark-plus-fill peer-checked:fill-white" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M2 15.5V2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.74.439L8 13.069l-5.26 2.87A.5.5 0 0 1 2 15.5m6.5-11a.5.5 0 0 0-1 0V6H6a.5.5 0 0 0 0 1h1.5v1.5a.5.5 0 0 0 1 0V7H10a.5.5 0 0 0 0-1H8.5z"/>
-                              </svg>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+              <% @books.each do |book| %>
+                <div class="card w-[30rem] shadow-xl">
+                  <div class="card-body">
+                    <div class="flex space-x-5">
+                      <div class="w-1/3">
+                        <img src="<%= book.cover_image_url %>" alt="<%= book.title %> book cover" class="rounded-xl">
+                      </div>
+                      <div class="w-2/3">
+                        <div class="h-2/4">
+                          <div class="flex">
+                            <h3 class="font-semibold text-xl w-7/8"><%= book.title %></h3>
+                            <div class="w-1/8">
+                              <label class="cursor-pointer">
+                                <input type="checkbox" class="hidden peer">
+                                <div class="btn p-2 shadow-xl fill-[#BDBDBD] bg-white color-[#BDBDBD] peer-checked:fill-white peer-checked:bg-[#FC674E] peer-checked:border-none rounded-lg">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="" class="bi bi-bookmark-plus-fill peer-checked:fill-white" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M2 15.5V2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.74.439L8 13.069l-5.26 2.87A.5.5 0 0 1 2 15.5m6.5-11a.5.5 0 0 0-1 0V6H6a.5.5 0 0 0 0 1h1.5v1.5a.5.5 0 0 0 1 0V7H10a.5.5 0 0 0 0-1H8.5z"/>
+                                  </svg>
+                                </div>
+                              </label>
                             </div>
+                          </div>
+                          <div class="w-7/8 flex justify-center items-center space-x-2">
+                            <p>Added by <span class="font-semibold"><%= book.user.email %></span></p>
+                          </div>
+                          <p class="mt-3"><%= book.description.truncate(100) %></p>
+                        </div>
+                        <div class="h-1/4 space-x-2 flex items-center">
+                          <span class="text-xl font-semibold">
+                            <%= book.reviews.average(:rating) || 0 %>
+                          </span>
+                          <div class="rating rating-sm">
+                            <% 5.times do |i| %>
+                              <input type="radio" name="rating-<%= book.id %>" class="mask mask-star-2 bg-orange-400" <%= 'checked' if (book.reviews.average(:rating) || 0) > i %> aria-label="<%= i + 1 %> star">
+                            <% end %>
+                          </div>  
+                          <span>(<%= book.reviews.count %> Reviews)</span>
+                        </div>
+                        <div class="space-x-4 h-1/4 flex items-end">
+                          <label for="review-drawer" class="btn py-6 rounded-xl btn-outline text-[#111F4D] border-[#E5E5E7] cursor-pointer">
+                            Review
                           </label>
-
+                          <button class="btn py-6 rounded-xl bg-[#111F4D] text-white">Read</button>
                         </div>
-
                       </div>
-                      <div class="w-7/8 flex justify-center items-center space-x-2">
-                        <div>
-                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-upload" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383"/>
-                            <path fill-rule="evenodd" d="M7.646 4.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V14.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708z"/>
-                          </svg>
-                        </div>
-                        <p>
-                          Added by 
-                          <span class="font-semibold">Fogad</span>
-                        </p>
-                      </div>
-                      <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, harum.</p>
-                    </div>
-                    <div class="h-1/4 space-x-2 flex items-center">
-                      <span class="text-xl font-semibold">4.0</span>
-                      <div class="rating rating-sm">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" aria-label="1 star">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" aria-label="2 star" checked>
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" aria-label="3 star">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" aria-label="4 star">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" aria-label="5 star">
-                      </div>  
-                      <span>(7 Reviews)</span>
-                    </div>
-                    <div class="space-x-4 h-1/4 flex items-end">
-                      <label for="review-drawer" class="btn py-6 rounded-xl btn-outline text-[#111F4D] border-[#E5E5E7] cursor-pointer">
-                        Review
-                      </label>
-                      <button class="btn py-6 rounded-xl bg-[#111F4D] text-white">Read</button>
                     </div>
                   </div>
                 </div>
-              </div>
+              <% end %>
             </div>
+
           </div>
 
           <div class="drawer-side">
