Drawer book details

--- a/app/views/book/index.html.erb
+++ b/app/views/book/index.html.erb
@@ -60,9 +60,10 @@
                     </div>
                     <div class="space-x-4 h-1/4 flex items-end">
                       <label for="review-drawer" 
-                            class="btn py-6 rounded-xl btn-outline text-[#111F4D] border-[#E5E5E7] cursor-pointer"
-                            data-book-id="<%= book.id %>"
-                            data-action="click->book-review#open">
+                        class="btn py-6 rounded-xl btn-outline text-[#111F4D] border-[#E5E5E7] cursor-pointer"
+                        data-book-id="<%= book.id %>"
+                        data-action="click->book-review#open"
+                      >
                         Review
                       </label>
                       <button class="btn py-6 rounded-xl bg-[#111F4D] text-white">Read</button>
