--- a/app/views/book/_navbar.html.erb
+++ b/app/views/book/_navbar.html.erb
@@ -1,24 +1,24 @@
-<div class="navbar w-full border-b-[#f7f4f2] border-b-1 py-6 px-16 mb-12">
+<div data-controller="book-search" class="navbar w-full border-b-[#f7f4f2] border-b-1 py-6 px-16 mb-12">
   <div class="navbar-start">
-    <label class="input bg-[#F4F7FF] border-[#CBD5E0] border-2">
-      <input type="search" class="grow py-6" placeholder="Search" />
+    <label class="input bg-[#F4F7FF] border-[#CBD5E0] border-2 flex items-center">
+      <input data-book-search-target="input" type="search" name="query" value="<%= params[:query] %>" class="grow py-6 w-full" placeholder="Search" />
       <div>
-        <button class="btn bg-[#111F4DCC] rounded-lg">
+        <button data-book-search-target="button" class="btn btn-search bg-[#111F4DCC] rounded-lg">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-search" viewBox="0 0 16 16">
             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
           </svg>
         </button>
-
       </div>
     </label>
   </div>
-  <div class="navbar-center">
-  </div>
+
+  <div class="navbar-center"></div>
+
   <div class="navbar-end">
     <div class="flex gap-4">
       <div class="avatar avatar-placeholder">
         <div class="bg-neutral text-neutral-content w-12 rounded-full">
-            <span class="text-md"><%= current_user.first_name[0] %><%= current_user.last_name[0] %></span>
+          <span class="text-md"><%= current_user.first_name[0] %><%= current_user.last_name[0] %></span>
         </div>
       </div>
       <div class="grid">
