Make styling responsive

--- a/app/views/book/_navbar.html.erb
+++ b/app/views/book/_navbar.html.erb
@@ -1,30 +1,61 @@
-<div data-controller="book-search" class="navbar w-full border-b-[#f7f4f2] border-b-1 py-6 px-16 mb-12">
-  <div class="navbar-start">
-    <label class="input bg-[#F4F7FF] border-[#CBD5E0] border-2 flex items-center">
-      <input data-book-search-target="input" type="search" name="query" value="<%= params[:query] %>" class="grow py-6 w-full" placeholder="Search" />
-      <div>
-        <button data-book-search-target="button" class="btn btn-search bg-[#111F4DCC] rounded-lg">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-search" viewBox="0 0 16 16">
-            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-          </svg>
-        </button>
-      </div>
-    </label>
-  </div>
+<div data-controller="book-search" class="grid w-full space-y-3 border-b-[#f7f4f2] border-b-1 py-6 md:px-16 mb-12">
+  <div class="navbar">
+    <div class="navbar-start">
+      <label for="my-drawer" class="drawer-button cursor-pointer lg:hidden">
+        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+        </svg>
+      </label>
 
-  <div class="navbar-center"></div>
+      <label class="input bg-[#F4F7FF] border-[#CBD5E0] border-2 hidden lg:flex items-center">
+        <input data-book-search-target="input" type="search" name="query" value="<%= params[:query] %>" class="grow py-6 w-full" placeholder="Search" />
+        <div>
+          <button data-book-search-target="button" class="btn btn-search bg-[#111F4DCC] rounded-lg">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-search" viewBox="0 0 16 16">
+              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+            </svg>
+          </button>
+        </div>
+      </label>
+    </div>
 
-  <div class="navbar-end">
-    <div class="flex gap-4">
-      <div class="avatar avatar-placeholder">
-        <div class="bg-neutral text-neutral-content w-12 rounded-full">
-          <span class="text-md"><%= current_user.first_name[0] %><%= current_user.last_name[0] %></span>
+    <div class="navbar-center">
+      <img alt="rubynor logo" src="<%= asset_path('Rubynor_logo_forenklet.png') %>" width="150" class="lg:hidden" />
+    </div>
+
+    <div class="navbar-end">
+      <div class="flex gap-4">
+        <div class="avatar avatar-placeholder">
+          <div class="bg-neutral text-neutral-content w-12 rounded-full">
+            <span class="text-md"><%= current_user.first_name[0] %><%= current_user.last_name[0] %></span>
+          </div>
+        </div>
+        <div class="md:grid hidden">
+          <p class="font-semibold"><%= current_user.first_name %> <%= current_user.last_name %></p>
+          <p class="small"><%= current_user.email %></p>
         </div>
       </div>
-      <div class="grid">
-        <p class="font-semibold"><%= current_user.first_name %> <%= current_user.last_name %></p>
-        <p class="small"><%= current_user.email %></p>
-      </div>
+    </div>
+
+  </div>
+  <div class="lg:hidden flex gap-6"> 
+    <label class="input">
+      <svg class="opacity-50" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <g stroke-linejoin="round" stroke-linecap="round" stroke-width="2.5" fill="none" stroke="currentColor">
+          <circle cx="11" cy="11" r="8"></circle>
+          <path d="m21 21-4.3-4.3"></path>
+        </g>
+      </svg>
+      <input data-book-search-target="input" type="search" name="query" value="<%= params[:query] %>" class="grow" placeholder="Search" />
+    </label>
+
+    <div class="ml-auto">
+      <select class="select" data-controller="book-review" data-book-review-target="sort" id="sort-dropdown">
+        <option disabled <%= params[:sort_by].blank? ? 'selected' : '' %>>Sort</option>
+        <option value="title" <%= params[:sort_by] == 'title' ? 'selected' : '' %>>Title</option>
+        <option value="date_added" <%= params[:sort_by] == 'date_added' ? 'selected' : '' %>>Date Added</option>
+      </select>
+
     </div>
   </div>
 </div>
