--- a/app/views/book/index.html.erb
+++ b/app/views/book/index.html.erb
@@ -2,21 +2,21 @@
   <div data-controller="book-review">
     <div class="drawer drawer-end">
       <input id="review-drawer" type="checkbox" class="drawer-toggle">
-      <div class="drawer-content px-12">
+      <div class="drawer-content px-6 md:px-12">
         <%= render "navbar" %>
 
         <div class="space-y-4">
-          <h1 class="text-3xl font-bold">Books</h1>
+          <h1 class="md:text-3xl md:font-bold font-semibold text-xl">Books</h1>
 
           <div class="flex">
-            <div class="filter w-1/2">
+            <div class="filter w-full md:w-1/2">
               <input class="btn bg-[#F9F9F9] text-[#BDBDBD] shadow-none border-none filter-reset" type="radio" name="metaframeworks" aria-label="All"/>
               <input class="btn bg-[#F9F9F9] text-[#BDBDBD] shadow-none border-none" type="radio" name="metaframeworks" aria-label="Education"/>
               <input class="btn bg-[#F9F9F9] text-[#BDBDBD] shadow-none border-none" type="radio" name="metaframeworks" aria-label="Business"/>
               <input class="btn bg-[#F9F9F9] text-[#BDBDBD] shadow-none border-none" type="radio" name="metaframeworks" aria-label="Sci-fi"/>
             </div>
 
-            <div class="w-1/2 flex justify-end">
+            <div class="hidden lg:flex w-1/2 justify-end">
               <div class="ml-auto">
                 <select class="select" data-controller="book-review" data-book-review-target="sort" id="sort-dropdown">
                   <option disabled <%= params[:sort_by].blank? ? 'selected' : '' %>>Sort</option>
@@ -42,7 +42,28 @@
 
       <div class="drawer-side" data-book-review-target="drawer">
         <label for="review-drawer" class="drawer-overlay"></label>
-        <div class="w-96 p-5 h-full overflow-y-scroll shadow-lg bg-[#F2F2F7] space-y-6">
+        <div class="w-96 p-5 h-full overflow-y-scroll shadow-lg bg-[#F2F2F7] space-y-6 pt-12">
+          <div class="flex items-center px-4 md:hidden">
+            <div class="w-1/2 flex items-center justify-start">
+              <label for="review-drawer" class="top-4 right-4 hover:bg-gray-400">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+                </svg>
+              </label>
+            </div>
+
+            <div class="w-1/2 flex items-center justify-end">
+              <label class="cursor-pointer">
+                <input type="checkbox" class="hidden peer">
+                <div class="btn p-2 shadow-xl fill-[#BDBDBD] bg-white color-[#BDBDBD] peer-checked:fill-white peer-checked:bg-[#FC674E] peer-checked:border-none rounded-lg">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="" class="bi bi-bookmark-plus-fill peer-checked:fill-white" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2 15.5V2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.74.439L8 13.069l-5.26 2.87A.5.5 0 0 1 2 15.5m6.5-11a.5.5 0 0 0-1 0V6H6a.5.5 0 0 0 0 1h1.5v1.5a.5.5 0 0 0 1 0V7H10a.5.5 0 0 0 0-1H8.5z"/>
+                  </svg>
+                </div>
+              </label>
+
+            </div>
+          </div>
           <div class="grid justify-center items-center space-y-4">
             <div class="m-auto mb-1">
               <img data-book-review-target="cover" src="" alt="Book cover" class="rounded-xl w-40">
@@ -89,32 +110,37 @@
             </div>
           </div>
 
-          <div>
-            <h3 class="text-xl font-bold mb-2">Short description</h3>
-            <p data-book-review-target="description"></p>
+          <div class="px-6 space-y-2">
+            <div>
+              <h3 class="text-xl font-bold mb-2">Short description</h3>
+              <p data-book-review-target="description"></p>
+            </div>
+
+
+            <%= form_with(model: Review.new, url: reviews_path, local: true, class: "space-y-3") do |form| %>
+              <h3 class="text-xl font-bold">Review</h3>
+              
+              <%= form.hidden_field :book_id, data: { book_review_target: "bookId" } %>
+              
+              <div>
+                <p>Rating</p>
+                <div class="rating rating-sm">
+                  <% 5.times do |i| %>
+                    <%= form.radio_button :rating, i+1, class: "mask mask-star-2 bg-orange-400", "aria-label": "#{i+1} star" %>
+                  <% end %>
+                </div>
+              </div>
+
+              <div>
+                <p>About</p>
+                <%= form.text_area :content, class: "textarea textarea-bordered w-full mt-3", placeholder: "Write your review..." %>
+                <%= form.submit "Add review", class: "btn bg-[#111F4D] text-white mt-4 rounded-xl ml-auto" %>
+                <button class="btn text-[#111F4D] mt-4 rounded-xl ml-auto">Read book</button>
+              </div>
+            <% end %>
+
           </div>
 
-          <!-- Review form -->
-          <%= form_with(model: Review.new, url: reviews_path, local: true, class: "space-y-3") do |form| %>
-            <h3 class="text-xl font-bold">Review</h3>
-            
-            <%= form.hidden_field :book_id, data: { book_review_target: "bookId" } %>
-            
-            <div>
-              <p>Rating</p>
-              <div class="rating rating-sm">
-                <% 5.times do |i| %>
-                  <%= form.radio_button :rating, i+1, class: "mask mask-star-2 bg-orange-400", "aria-label": "#{i+1} star" %>
-                <% end %>
-              </div>
-            </div>
-
-            <div>
-              <p>About</p>
-              <%= form.text_area :content, class: "textarea textarea-bordered w-full mt-3", placeholder: "Write your review..." %>
-              <%= form.submit "Add review", class: "btn bg-[#111F4D] text-white mt-4 rounded-xl ml-auto" %>
-            </div>
-          <% end %>
         </div>
       </div>
     </div>
