--- a/app/views/book/_books.html.erb
+++ b/app/views/book/_books.html.erb
@@ -1,59 +1,58 @@
-
-
-
-
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-<% @books.each do |book| %>
-    <div class="card w-[30rem] shadow-xl">
-    <div class="card-body">
+<div class="grid grid-cols-6 gap-6">
+  <% @books.each do |book| %>
+    <div class="card col-span-6 lg:col-span-3 shadow-xl relative lg:cursor-default cursor-pointer"
+        data-book-id="<%= book.id %>"
+        data-action="click->book-review#open"
+    >
+      <div class="card-body">
         <div class="flex space-x-5">
-        <div class="w-1/3">
+          <div class="w-2/7 md:w-1/6">
             <img src="<%= book.cover_image_url %>" alt="<%= book.title %> book cover" class="rounded-xl">
-        </div>
-        <div class="w-2/3">
+          </div>
+          <div class="w-5/7 md:w-5/6">
             <div class="h-2/4">
-            <div class="flex">
-                <h3 class="font-semibold text-xl w-7/8"><%= book.title %></h3>
+              <div class="flex">
+                <h3 class="font-semibold text-lg md:text-xl w-7/8"><%= book.title %></h3>
                 <div class="w-1/8">
-                <label class="cursor-pointer">
+                  <label class="cursor-pointer hidden md:block">
                     <input type="checkbox" class="hidden peer">
                     <div class="btn p-2 shadow-xl fill-[#BDBDBD] bg-white color-[#BDBDBD] peer-checked:fill-white peer-checked:bg-[#FC674E] peer-checked:border-none rounded-lg">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="" class="bi bi-bookmark-plus-fill peer-checked:fill-white" viewBox="0 0 16 16">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="" class="bi bi-bookmark-plus-fill peer-checked:fill-white" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M2 15.5V2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.74.439L8 13.069l-5.26 2.87A.5.5 0 0 1 2 15.5m6.5-11a.5.5 0 0 0-1 0V6H6a.5.5 0 0 0 0 1h1.5v1.5a.5.5 0 0 0 1 0V7H10a.5.5 0 0 0 0-1H8.5z"/>
-                    </svg>
+                      </svg>
                     </div>
-                </label>
+                  </label>
                 </div>
+              </div>
+              <div class="w-7/8 flex justify-center items-center space-x-2 text-xs">
+                <p>Added by <span class="font-semibold"><%= book.user.first_name %></span></p>
+              </div>
+              <p class="mt-3 text-xs"><%= book.description.truncate(100) %></p>
             </div>
-            <div class="w-7/8 flex justify-center items-center space-x-2">
-                <p>Added by <span class="font-semibold"><%= book.user.email %></span></p>
-            </div>
-            <p class="mt-3"><%= book.description.truncate(100) %></p>
-            </div>
-            <div class="h-1/4 space-x-2 flex items-center">
-            <span class="text-xl font-semibold">
+            <div class="h-3/4 lg:h-1/4 space-x-2 flex items-center align-center">
+              <span class="text-lg md:text-xl font-semibold">
                 <%= (book.reviews.average(:rating) || 0).round(0.5) %>
-            </span>
-            <div class="rating rating-sm">
+              </span>
+              <div class="rating rating-xs">
                 <% 5.times do |i| %>
-                <input type="radio" name="rating-<%= book.id %>" class="mask mask-star-2 bg-orange-400" <%= 'checked' if (book.reviews.average(:rating) || 0) > i %> aria-label="<%= i + 1 %> star">
+                  <input type="radio" name="rating-<%= book.id %>" class="mask mask-star-2 bg-orange-400" <%= 'checked' if (book.reviews.average(:rating) || 0) > i %> aria-label="<%= i + 1 %> star">
                 <% end %>
-            </div>  
-            <span>(<%= book.reviews.count %> Reviews)</span>
+              </div>  
+              <span class="hidden md:block">(<%= book.reviews.count %> Reviews)</span>
             </div>
-            <div class="space-x-4 h-1/4 flex items-end">
-            <label for="review-drawer" 
-                class="btn py-6 rounded-xl btn-outline text-[#111F4D] border-[#E5E5E7] cursor-pointer"
-                data-book-id="<%= book.id %>"
-                data-action="click->book-review#open"
-            >
+            <div class="space-x-4 h-1/4 lg:flex hidden items-end">
+              <label for="review-drawer" 
+                  class="btn py-6 rounded-xl btn-outline text-[#111F4D] border-[#E5E5E7] cursor-pointer"
+                  data-book-id="<%= book.id %>"
+                  data-action="click->book-review#open"
+              >
                 Review
-            </label>
-            <button class="btn py-6 rounded-xl bg-[#111F4D] text-white">Read</button>
+              </label>
+              <button class="btn py-6 rounded-xl bg-[#111F4D] text-white">Read</button>
             </div>
+          </div>
         </div>
-        </div>
+      </div>
     </div>
-    </div>
-<% end %>
+  <% end %>
 </div>
