--- a/app/views/layouts/_drawer.html.erb
+++ b/app/views/layouts/_drawer.html.erb
@@ -1,23 +1,23 @@
 <div class="bg-[#111F4D]">
-    <div class="drawer drawer-open">
-    <input id="my-drawer-2" type="checkbox" class="drawer-toggle" />
-    <div class="drawer-content bg-white h-full rounded-l-2xl">
-        <%= yield %>
-    </div>
-    <div class="drawer-side text-white">
-        <div class="menu min-h-full flex items-center">
-        <div class="py-28">
-            <img alt="rubynor logo" src="<%= asset_path('Rubynor_logo_forenklet_hvit.png') %>" class="w-96" />
+    <div class="drawer lg:drawer-open">
+        <input id="my-drawer" type="checkbox" class="drawer-toggle" />
+        <div class="drawer-content bg-white h-full lg:rounded-l-2xl">
+            <%= yield %>
         </div>
-
-        <ul class="menu text-3xl px-24 font-semibold flex items-start gap-8">
-            <li>Home</li>
-            <li>Wishlist</li>
-            <li>Account</li>
-            <li>Settings</li>
-        </ul>
+        <div class="drawer-side">
+            <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
+            <ul class="menu bg-[#111F4D] text-3xl px-12 font-semibold flex items-start gap-8 min-h-full w-80 p-4 text-white">
+                <li>
+                    <div class="py-28">
+                        <img alt="rubynor logo hvite forenklet" src="<%= asset_path('Rubynor_logo_forenklet_hvit.png') %>" width="300" />
+                    </div>
+                </li>
+                <li class="w-full flex items-center">Home</li>
+                <li class="w-full flex items-center">Wishlist</li>
+                <li class="w-full flex items-center">Account</li>
+                <li class="w-full flex items-center">Settings</li>
+            </ul>
         </div>
-    </div>
     </div>
 </div>
 
