--- a/app/views/book/index.html.erb
+++ b/app/views/book/index.html.erb
@@ -82,14 +82,7 @@
 
             <div class="m-auto">
               <div class="flex justify-center items-center space-x-3">
-                <div class="rating rating-xs">
-                  <input type="radio" name="display-rating" class="mask mask-star-2 bg-orange-400" aria-label="1 star" />
-                  <input type="radio" name="display-rating" class="mask mask-star-2 bg-orange-400" aria-label="2 star" />
-                  <input type="radio" name="display-rating" class="mask mask-star-2 bg-orange-400" aria-label="3 star" />
-                  <input type="radio" name="display-rating" class="mask mask-star-2 bg-orange-400" aria-label="4 star" />
-                  <input type="radio" name="display-rating" class="mask mask-star-2 bg-orange-400" aria-label="5 star" />
-                </div>
-                <span data-book-review-target="rating">0.0</span>
+                <div data-book-review-target="ratingStars" class="rating rating-xs"></div>
               </div>
               <div class="stats stats-horizontal">
                 <div class="stat">
@@ -98,7 +91,7 @@
                 </div>
 
                 <div class="stat">
-                  <div data-book-review-target="ratingCount" class="stat-value text-sm">0</div>
+                  <div data-book-review-target="rating" class="stat-value text-sm">0</div>
                   <div class="stat-desc">ratings</div>
                 </div>
 
