Make both search bars work

--- a/app/views/book/_navbar.html.erb
+++ b/app/views/book/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div data-controller="book-search" class="grid w-full space-y-3 border-b-[#f7f4f2] border-b-1 py-6 md:px-16 mb-12">
+<div data-controller="book-search" class="grid w-full space-y-6 border-b-[#f7f4f2] border-b-1 py-6 lg:px-16 mb-12">
   <div class="navbar">
     <div class="navbar-start">
       <label for="my-drawer" class="drawer-button cursor-pointer lg:hidden">
