--- a/app/views/book/index.html.erb
+++ b/app/views/book/index.html.erb
@@ -4,10 +4,8 @@
       <input id="review-drawer" type="checkbox" class="drawer-toggle">
       <div class="drawer-content px-6 md:px-12">
         <%= render "navbar" %>
-
         <div class="space-y-4">
           <h1 class="md:text-3xl md:font-bold font-semibold text-xl">Books</h1>
-
           <div class="flex">
             <div class="filter w-full md:w-1/2">
               <input class="btn bg-[#F9F9F9] text-[#BDBDBD] shadow-none border-none filter-reset" type="radio" name="metaframeworks" aria-label="All"/>
@@ -15,10 +13,9 @@
               <input class="btn bg-[#F9F9F9] text-[#BDBDBD] shadow-none border-none" type="radio" name="metaframeworks" aria-label="Business"/>
               <input class="btn bg-[#F9F9F9] text-[#BDBDBD] shadow-none border-none" type="radio" name="metaframeworks" aria-label="Sci-fi"/>
             </div>
-
             <div class="hidden lg:flex w-1/2 justify-end">
-              <div class="ml-auto">
-                <select class="select" data-controller="book-review" data-book-review-target="sort" id="sort-dropdown">
+              <div data-controller="book-search" class="ml-auto">
+                <select class="select" data-book-search-target="sort" id="sort-dropdown">
                   <option disabled <%= params[:sort_by].blank? ? 'selected' : '' %>>Sort</option>
                   <option value="title" <%= params[:sort_by] == 'title' ? 'selected' : '' %>>Title</option>
                   <option value="date_added" <%= params[:sort_by] == 'date_added' ? 'selected' : '' %>>Date Added</option>
@@ -27,17 +24,13 @@
             </div>
           </div>
         </div>
-
         <div class="divider"></div>
-
         <h2 class="text-xl mb-6 font-semibold">
           <%= params[:query].present? ? 'Search Results' : 'Recently added' %>
         </h2>
-
-        <div id="books-container">
+        <div id="books-container" data-controller="book-search">
           <%= render "books" %>
         </div>
-
       </div>
 
       <div class="drawer-side" data-book-review-target="drawer">
@@ -139,10 +132,3 @@
     </div>
   </div>
 <% end %>
-<script>
-  document.getElementById("sort-dropdown").addEventListener("change", function () {
-    const sortBy = this.value;
-    window.location.href = `?sort_by=${sortBy}`;
-  });
-
-</script>
