Book create form

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -29,7 +29,7 @@
           <%= params[:query].present? ? 'Search Results' : 'Recently added' %>
         </h2>
         <div id="books-container" data-controller="book-search">
-          <%= render "books" %>
+          <%= render "book" %>
         </div>
       </div>
 
