--- a/app/views/books/_navbar.html.erb
+++ b/app/views/books/_navbar.html.erb
@@ -50,11 +50,7 @@
     </label>
 
     <div class="ml-auto">
-      <select class="select" data-book-search-target="sort" id="sort-dropdown">
-        <option disabled <%= params[:sort_by].blank? ? 'selected' : '' %>>Sort</option>
-        <option value="title" <%= params[:sort_by] == 'title' ? 'selected' : '' %>>Title</option>
-        <option value="date_added" <%= params[:sort_by] == 'date_added' ? 'selected' : '' %>>Date Added</option>
-      </select>
+      <%= render "select_sort" %>
     </div>
   </div>
 </div>
