--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
-<div class="bg-[#F2F4F7] h-screen w-screen flex items-center justify-center">
-  <div class="bg-white p-8 py-12 rounded-3xl text-[#757575] w-[30rem]">
+<div class="bg-gray-50 h-screen w-screen flex items-center justify-center">
+  <div class="bg-white p-8 py-12 rounded-3xl text-gray-200 w-[30rem]">
     <div class="text-center mb-12 space-y-3">
-      <h2 class="text-[#212121] text-3xl font-extrabold">Sign Up</h2>
-      <p class="text-[#757575]">Create your account to get started!</p>
+      <h2 class="text-gray-700 text-3xl font-extrabold">Sign Up</h2>
+      <p class="text-gray-200">Create your account to get started!</p>
     </div>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -44,9 +44,9 @@
         </div>
 
         <div class="w-full actions text-center space-y-5">
-          <%= f.submit "Sign up", class: "btn w-full bg-[#111F4D] text-white rounded-xl" %>
-          <p class="text-[#757575]">
-            Already have an account? <%= link_to "Log in", new_user_session_path, class: "text-[#111F4D] font-bold" %>
+          <%= f.submit "Sign up", class: "btn w-full bg-blue-500 text-white rounded-xl" %>
+          <p class="text-gray-200">
+            Already have an account? <%= link_to "Log in", new_user_session_path, class: "text-blue-500 font-bold" %>
           </p>
         </div>
       </div>
