--- a/app/views/layouts/_drawer.html.erb
+++ b/app/views/layouts/_drawer.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-[#111F4D]">
+<div class="bg-blue-500">
     <div class="drawer lg:drawer-open">
         <input id="my-drawer" type="checkbox" class="drawer-toggle" />
         <div class="drawer-content bg-white h-full lg:rounded-l-2xl">
@@ -6,7 +6,7 @@
         </div>
         <div class="drawer-side">
             <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-            <ul class="menu bg-[#111F4D] text-3xl px-12 font-semibold flex items-start gap-8 min-h-full w-80 p-4 text-white">
+            <ul class="menu bg-blue-500 text-3xl px-12 font-semibold flex items-start gap-8 min-h-full w-80 p-4 text-white">
                 <li>
                     <div class="py-28">
                         <img alt="rubynor logo hvite forenklet" src="<%= asset_path('Rubynor_logo_forenklet_hvit.png') %>" width="300" />
