--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -3,20 +3,18 @@
     <div
       class="card col-span-6 lg:col-span-3 shadow-xl relative lg:cursor-default cursor-pointer"
       data-book-id="<%= book.id %>"
+      data-action="click->book-review#open"
     >
-      <div class="md:hidden" data-action="click->book-review#open"></div>
       <div class="card-body">
         <div class="flex space-x-5">
-          <div class="w-2/7 md:w-1/6">
+          <div class="w-2/7 md:w-2/8">
             <% if book.cover_image.attached? %>
               <%= image_tag book.cover_image %>
             <% else %>
               <p>No cover image available</p>
             <% end %>
-
-
           </div>
-          <div class="w-5/7 md:w-5/6">
+          <div class="w-5/7 md:w-6/8">
             <div class="h-2/4">
               <div class="flex">
                 <h3 class="font-semibold text-lg md:text-xl w-7/8"><%= book.title %></h3>
@@ -24,7 +22,7 @@
                   <%= render 'bookmarks/bookmark_button', book: book, bookmarked: current_user.bookmarks.exists?(book: book) %>
                 <% end %>
               </div>
-              <div class="w-7/8 flex justify-center items-center space-x-2 text-xs">
+              <div class="w-7/8 flex justify-center items-center space-x-2 text-sm">
                 <p>Added by <span class="font-semibold"><%= book.user.first_name %> <%= book.user.last_name %></span></p>
               </div>
               <p class="mt-3 text-xs"><%= book.description.truncate(100) %></p>
@@ -51,7 +49,8 @@
               <% if book.pdf_file.attached? %>
                 <%= link_to "Read", download_book_path(book), 
                     class: "btn py-6 rounded-xl bg-blue-500 text-white",
-                    method: :get %>
+                    method: :get,
+                    data: { action: "click->book-review#stopPropagation" } %>
               <% else %>
                 <button class="btn py-6 rounded-xl bg-blue-500 text-white" disabled>
                   No PDF Available
