--- a/app/views/books/_navbar.html.erb
+++ b/app/views/books/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div data-controller="book-search" class="grid w-full space-y-6 border-b-[#f7f4f2] border-b-1 py-6 lg:px-16 mb-12">
+<div data-controller="book-search" class="grid w-full space-y-6 border-b-[#f7f4f2] border-b-1 py-6 lg:px-12 mb-12">
   <div class="navbar">
     <div class="navbar-start">
       <label for="my-drawer" class="drawer-button cursor-pointer lg:hidden">
@@ -24,21 +24,35 @@
     </div>
 
     <div class="navbar-end">
-      <div class="flex gap-4">
-        <div class="avatar avatar-placeholder">
-          <div class="bg-neutral text-neutral-content w-12 rounded-full">
-            <span class="text-md"><%= current_user.first_name[0] %><%= current_user.last_name[0] %></span>
+      <div class="dropdown dropdown-end">
+        <div tabindex="0" role="button">
+          <div class="flex gap-4">
+            <div class="avatar avatar-placeholder">
+              <div class="bg-neutral text-neutral-content w-12 rounded-full">
+                <span class="text-md"><%= current_user.first_name[0] %><%= current_user.last_name[0] %></span>
+              </div>
+            </div>
+            <div class="lg:grid hidden">
+              <p class="font-semibold"><%= current_user.first_name %> <%= current_user.last_name %></p>
+              <p class="small"><%= current_user.email %></p>
+            </div>
+            <div class="lg:block hidden m-auto">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/>
+              </svg>
+            </div>
           </div>
         </div>
-        <div class="md:grid hidden">
-          <p class="font-semibold"><%= current_user.first_name %> <%= current_user.last_name %></p>
-          <p class="small"><%= current_user.email %></p>
-        </div>
+        <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
+          <li>
+            <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-error" %>
+          </li>
+        </ul>
       </div>
     </div>
 
   </div>
-  <div class="lg:hidden flex gap-6"> 
+  <div class="lg:hidden flex items-center gap-6"> 
     <label class="input">
       <svg class="opacity-50" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
         <g stroke-linejoin="round" stroke-linecap="round" stroke-width="2.5" fill="none" stroke="currentColor">
